--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="container">
       <h2>ITI Electrician trade (theory)</h2>
       <div class="feature-grid">
+        <div class="feature">Notes summery </div>
         <div class="feature"> Chapterwise Mcqs </div>
         <div class="feature"> Chapterwise mock test </div>
       </div>
