--- a/html/ITI_Electrician_First_Year_High_Scoring_Chapters.html
+++ b/html/ITI_Electrician_First_Year_High_Scoring_Chapters.html
@@ -101,6 +101,6 @@
     </a>
   </div>
 
-  <footer>© 2025 ITI Study Resource | Designed by ChatGPT</footer>
+  <footer>© 2025 ITI Study Resource | Designed by Ashwin Chauhan</footer>
 </body>
 </html>
