--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <h2>ITI Electrician trade (theory)</h2>
       <div class="feature-grid">
-        <div class="feature" src= " html/ITI_Electrician_First_Year_High_Scoring_Chapters.html ">Notes summery </div>
+      <a href= "html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target= "blank"><div class="feature">Notes summery </div></a>
         <div class="feature"> Chapterwise Mcqs </div>
         <div class="feature"> Chapterwise mock test </div>
       </div>
