--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Programing school website </title></title>
   <link rel="stylesheet" href="css/styles.css">
+  <style>
+    a{ text-decoratuon:none ;}
+  </style>
 </head>
 <body>
 
