--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <title> Programing school website </title></title>
   <link rel="stylesheet" href="css/styles.css">
   <style>
-    a{ text-decoratuon:none ;}
+   <style>
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+  </style>
   </style>
 </head>
 <body>
