--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
       <h2>ITI Electrician trade (theory)</h2>
       <div class="feature-grid">
-      <a href= "html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target= "blank"><div class="feature">Notes summery </div></a>
+      <a href= "html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target= "self"><div class="feature">Notes summery </div></a>
         <div class="feature"> Chapterwise Mcqs </div>
         <div class="feature"> Chapterwise mock test </div>
       </div>
