--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
   <title> Programing school website </title></title>
   <link rel="stylesheet" href="css/styles.css">
   <style>
-   <style>
     a {
       text-decoration: none;
       color: inherit;
     }
-  </style>
   </style>
 </head>
 <body>
@@ -36,8 +34,8 @@
       <h2>ITI Electrician trade (theory)</h2>
       <div class="feature-grid">
       <a href= "html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target= "self"><div class="feature">Notes summery </div></a>
-        <div class="feature"> Chapterwise Mcqs </div>
-        <div class="feature"> Chapterwise mock test </div>
+      <a href="html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target="self"><div class="feature"> Chapterwise Mcqs </div></a>
+      <a href="html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target="self"><div class="feature"> Chapterwise mock test </div></a>
       </div>
     </div>
   </section>
