--- a/html/safety_first_aid.html
+++ b/html/safety_first_aid.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Safety & First Aid - ITI Electrician</title>
-    <link rel="stylesheet" href="safety_first_aid.css">
+    <link rel="stylesheet" href="css/safety_first_aid.css">
 </head>
 <body>
     <header>
