--- a/html/safety_first_aid.html
+++ b/html/safety_first_aid.html
@@ -88,7 +88,6 @@
     </div>
 
     <footer>
-        © 2025 ITI Study Resource | Designed by ChatGPT
-    </footer>
+        © 2025 ITI Study Resource | Designed by Ashwin Chauhan   </footer>
 </body>
 </html>
