--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="feature-grid">
       <a href= "html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target= "self"><div class="feature">Notes summery </div></a>
       <a href="html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target="self"><div class="feature"> Chapterwise Mcqs </div></a>
-      <a href="html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target="self"><div class="feature"> Chapterwise mock test </div></a>
+      <a href="mocktest/all chapters.html" target="self"><div class="feature"> Chapterwise mock test </div></a>
       </div>
     </div>
   </section>
