--- a/Mocktest/all chapters.html
+++ b/Mocktest/all chapters.html
@@ -18,7 +18,7 @@ Content-Location: https://ashwinbabu01.github.io/Programing-school/html/ITI_Elec
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ITI Electrician First Year - High Scoring Chapters</title>
-  
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
