--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Programing school website </title></title>
+  <title> mock test iti website </title></title>
   <link rel="stylesheet" href="css/styles.css">
   <style>
     a {
       text-decoration: none;
       color: inherit;
     }
+.font{
+   font-size: 20px;
+  
+}
   </style>
 </head>
 <body>
@@ -23,8 +27,9 @@
         
         <a href="#" class="btn-primary"> Start  Mock test </a>
       </div>
-      <div class="hero-image">
-        <img src="hero-boy.png" alt="Child learning coding">
+      <br>
+      <div class="#">
+        <p class= "font">🖕 Tap here to start your mock test </p>
       </div>
     </div>
   </header>
