--- a/html/ITI_Electrician_First_Year_High_Scoring_Chapters.html
+++ b/html/ITI_Electrician_First_Year_High_Scoring_Chapters.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ITI Electrician First Year - High Scoring Chapters</title>
   <style>
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #f5f9fc;
