--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       </div>
     </div>
   </section>
+ <!-- यहाँ se design hai kuchh-->
 
+  <!--
   <section class="programs">
     <div class="container">
       <h2>Выберите подходящую программу для вашего ребёнка</h2>
@@ -76,6 +78,44 @@
       </div>
     </div>
   </section>
+  -->
+<!-- 
+    यह एक multi-line comment है।
+    इसमें आप कई लाइनों में नोट्स लिख सकते हैं।
+    यह ब्राउज़र में दिखाई नहीं देता।
+-->
+  
+<footer class="site-footer">
+  <div class="footer-container">
+    <div class="footer-column">
+      <h3>ITI Electrician Trade</h3>
+      <p>हमारा उद्देश्य है कि प्रत्येक छात्र को तकनीकी शिक्षा में श्रेष्ठ बनाना। यह वेबसाइट खासकर इलेक्ट्रीशियन ट्रेड के छात्रों के लिए बनाई गई है।</p>
+    </div>
 
+    <div class="footer-column">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="#">होम</a></li>
+        <li><a href="#">पाठ्यक्रम</a></li>
+        <li><a href="#">नोट्स</a></li>
+        <li><a href="#">संपर्क करें</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>संपर्क जानकारी</h3>
+      <p>📧 Email: chauhanvansiashwin7@gmail.com</p>
+      <p>📍 स्थान: भारत</p>
+    </div>
+  </div>
+
+  <div class="designer">
+    यह वेबसाइट <span>Ashwin Chauhan</span> द्वारा बनाई गई है
+  </div>
+
+  <div class="footer-bottom">
+    © 2025 ITI Electrician Trade | सर्वाधिकार सुरक्षित
+  </div>
+</footer>
 </body>
 </html>
