--- a/index.html
+++ b/index.html
@@ -118,5 +118,9 @@
     © 2025 ITI Electrician Trade | सर्वाधिकार सुरक्षित
   </div>
 </footer>
+<script src="javascript/script.js"></script>
+<script src="secondFile.js"></script>
+  
 </body>
+  
 </html>
