--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> mock test iti website </title></title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/bounce.css">
   <style>
     a {
       text-decoration: none;
@@ -118,7 +119,7 @@
     © 2025 ITI Electrician Trade | सर्वाधिकार सुरक्षित
   </div>
 </footer>
-<script src="javascript/script.js"></script>
+<script src="javascript/bounce.js"></script>
 <script src="secondFile.js"></script>
   
 </body>
