--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title> mock test iti website </title></title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bounce.css">
+  <link rel="stylesheet" href="css/footer.css">
   <style>
     a {
       text-decoration: none;
@@ -86,41 +87,45 @@
     इसमें आप कई लाइनों में नोट्स लिख सकते हैं।
     यह ब्राउज़र में दिखाई नहीं देता।
 -->
+
+  <!-- Footer Start -->
+  <footer class="site-footer">
+    <div class="footer-container">
+      <div class="footer-column">
+        <h3>ITI Electrician Trade</h3>
+        <p>हमारा उद्देश्य है कि प्रत्येक छात्र को तकनीकी शिक्षा में श्रेष्ठ बनाना। यह वेबसाइट खासकर इलेक्ट्रीशियन ट्रेड के छात्रों के लिए बनाई गई है।</p>
+      </div>
+
+      <div class="footer-column">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="#">होम</a></li>
+          <li><a href="#">पाठ्यक्रम</a></li>
+          <li><a href="#">नोट्स</a></li>
+          <li><a href="#">संपर्क करें</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h3>संपर्क जानकारी</h3>
+        <p>📧 Email: chauhanvanssiashwin7@gmail.com</p>
+        <p>📍 स्थान: भारत</p>
+      </div>
+    </div>
+
+    <div class="designer">
+      यह वेबसाइट <span>Ashwin Chauhan</span> द्वारा बनाई गई है
+    </div>
+
+    <div class="footer-bottom">
+      © 2025 ITI Electrician Trade | सर्वाधिकार सुरक्षित
+    </div>
+  </footer>
+  <!-- Footer End -->
+
   
-<footer class="site-footer">
-  <div class="footer-container">
-    <div class="footer-column">
-      <h3>ITI Electrician Trade</h3>
-      <p>हमारा उद्देश्य है कि प्रत्येक छात्र को तकनीकी शिक्षा में श्रेष्ठ बनाना। यह वेबसाइट खासकर इलेक्ट्रीशियन ट्रेड के छात्रों के लिए बनाई गई है।</p>
-    </div>
-
-    <div class="footer-column">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="#">होम</a></li>
-        <li><a href="#">पाठ्यक्रम</a></li>
-        <li><a href="#">नोट्स</a></li>
-        <li><a href="#">संपर्क करें</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-column">
-      <h3>संपर्क जानकारी</h3>
-      <p>📧 Email: chauhanvansiashwin7@gmail.com</p>
-      <p>📍 स्थान: भारत</p>
-    </div>
-  </div>
-
-  <div class="designer">
-    यह वेबसाइट <span>Ashwin Chauhan</span> द्वारा बनाई गई है
-  </div>
-
-  <div class="footer-bottom">
-    © 2025 ITI Electrician Trade | सर्वाधिकार सुरक्षित
-  </div>
-</footer>
 <script src="javascript/bounce.js"></script>
-<script src="secondFile.js"></script>
+<script src="javascript/footer.js"></script>
   
 </body>
   
