--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <div class="container">
       <h2>ITI Electrician trade (theory)</h2>
       <div class="feature-grid">
-      <a href= "html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target= "self"><div class="feature">Notes summery </div></a>
-      <a href="html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target="self"><div class="feature"> Chapterwise Mcqs </div></a>
-      <a href="Mocktest/allchapters.html" target="self"><div class="feature"> Chapterwise mock test </div></a>
+      <a href= "html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target= "self"><div class="feature box1">Notes summery </div></a>
+      <a href="html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target="self"><div class="feature box2"> Chapterwise Mcqs </div></a>
+      <a href="Mocktest/allchapters.html" target="self"><div class="feature box3"> Chapterwise mock test </div></a>
       </div>
     </div>
   </section>
