--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bounce.css">
   <link rel="stylesheet" href="css/footer.css">
+  
+  <link rel="stylesheet" href="css/boxdrop.css">
   <style>
     a {
       text-decoration: none;
@@ -126,6 +128,8 @@
   
 <script src="javascript/bounce.js"></script>
 <script src="javascript/footer.js"></script>
+<script src="javascript/dropbox.js"></script>
+
   
 </body>
   
