--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <header class="hero-section">
     <img class = "dropi" src= "images/logo.png" alt = "logo" width = "50%" height = "50%"/>
-    <span class="highlight dropt">ASHWIN CHAUHAN</span>
+    <span class="highlight dropt size">ASHWIN CHAUHAN</span>
     <div class="container">
       <div class="hero-text">
         <h1> Welcome To Learning World></h1>
