--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header class="hero-section">
     <img class = "dropi" src= "images/logo.png" alt = "logo" width = "50%" height = "50%"/>
     <br>
-    <span class="highlight dropt size">ASHWIN CHAUHAN</span>
+    <p class="highlight dropt size">ASHWIN CHAUHAN</p>
     <div class="container">
       <div class="hero-text">
         <h1> Welcome To Learning World></h1>
