--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
   </header>
 
-  <section class="features">
+  <section class="features bodyg">
     <div class="container">
       <h2 class = "target-text">ITI Electrician trade (theory)</h2>
       <div class="feature-grid">
