--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </header>
 
   <section class="features bodyg">
-    <div class="container">
+    <div class="containerglow">
       <h2 class = "target-text">ITI Electrician trade (theory)</h2>
       <div class="feature-grid">
       <a href= "html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target= "self"><div class="feature box box1">Notes summery </div></a>
