--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/bounce.css">
   <link rel="stylesheet" href="css/footer.css">
   
-  <link rel="stylesheet" href="css/glowboxes.css">
+  <link rel="stylesheet" href="css/glowbox-version2.css ">
   <style>
     a {
       text-decoration: none;
@@ -130,7 +130,7 @@
   
 <script src="javascript/bounce.js"></script>
 <script src="javascript/footer.js"></script>
-<script src="javascript/glowboxes.js"></script>
+<script src="javascript/glowbox-version2.js"></script>
 
   
 </body>
