--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   
 <script src="javascript/bounce.js"></script>
 <script src="javascript/footer.js"></script>
-<script src="javascript/dropbox.js"></script>
+<script src="javascript/dropbox2.js"></script>
 
   
 </body>
