--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <header class="hero-section">
-    <img class = "dropi" src= "images/logo.png" alt = "logo" width = "50%" height = "50%"/>
+    <img class = "dropi" src= "images/weblogo.png" alt = "logo" width = "50%" height = "50%"/>
     <br>
     <p class="highlight dropt size">ASHWIN CHAUHAN</p>
     <div class="container">
