--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="containerglow">
       <h2 class = "target-text">ITI Electrician trade (theory)</h2>
       <div class="feature-grid">
-      <a href= "html/ITI_Electrician_First_Year_High_Scoring_Chapters.html" target= "self"><div class="feature box box1">Notes summery </div></a>
+      <a href= "html/notes summery/chapterwise_notessummery.html" target= "self"><div class="feature box box1">Notes summery </div></a>
       <a href="html/chapterwise_mcqs.html" target="self"><div class="feature box box2"> Chapterwise Mcqs </div></a>
       <a href="Mocktest/allchapters.html" target="self"><div class="feature box box3"> Chapterwise mock test </div></a>
       </div>
