--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <h2 class = "target-text">ITI Electrician trade (theory)</h2>
       <div class="feature-grid">
       <a href= "html/notes summery/chapterwise_notessummery.html" target= "self"><div class="feature box box1">Notes summery </div></a>
-      <a href="html/chapterwise_mcqs.html" target="self"><div class="feature box box2"> Chapterwise Mcqs </div></a>
-      <a href="Mocktest/allchapters.html" target="self"><div class="feature box box3"> Chapterwise mock test </div></a>
+      <a href="html/chapterwise_mcqs/chapterwise_mcqs.html" target="self"><div class="feature box box2"> Chapterwise Mcqs </div></a>
+      <a href="html/mock_test/chapterwise_mocktest.html" target="self"><div class="feature box box3"> Chapterwise mock test </div></a>
       </div>
     </div>
   </section>
