--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/footer.css">
   
   <link rel="stylesheet" href="css/dropbox.css ">
+  <link rel="stylesheet" href="css/homepage_futuristic.css">
   <style>
     a {
       text-decoration: none;
