--- a/html/notes summery/html/N1.html
+++ b/html/notes summery/html/N1.html
@@ -249,8 +249,9 @@
   </main>
   
   <div class="footer">
-    &copy; 2025 • Royal Safety & First Aid Guide<br>
-    Designed for futuristic workplaces • सुरक्षित रहें!
+    &copy; 2025 •  Safety & First Aid Royal Guide<br>
+    Designed By ASHWIN CHAUHAN • धन्यवाद!<br>
+    ❤ राधे राधे ❤
   </div>
 </body>
 </html>
