--- a/html/notes summery/html/N1.html
+++ b/html/notes summery/html/N1.html
@@ -135,7 +135,7 @@
 <body>
   <header>
     <h1>📘 सेफ्टी और फर्स्ट एड</h1>
-    <p>Futuristic Royal Guide • संक्षिप्त नोट्स</p>
+    <p>Ashwin Royal Guide • संक्षिप्त नोट्स</p>
   </header>
 
   <main>
