--- a/html/mock_test/html/mocktest1.html
+++ b/html/mock_test/html/mocktest1.html
@@ -2,7 +2,7 @@
 <html lang="hi">
 <head>
     <meta charset="UTF-8">
-    <title>ITI इलेक्ट्रीशियन Futuristic Mock Test</title>
+    <title>ITI इलेक्ट्रीशियन  Mock Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Futuristic, comfortable color palette -->
     <style>
@@ -121,6 +121,6 @@
             <div id="answers-summary"></div>
         </div>
     </div>
-    <script src="mocktest.js"></script>
+    <script src="../javascript/mocktest1.js"></script>
 </body>
 </html>
