--- a/html/mock_test/html/mocktest1.html
+++ b/html/mock_test/html/mocktest1.html
@@ -5,7 +5,7 @@
   <title>ITI इलेक्ट्रीशियन: सुरक्षा और प्राथमिक चिकित्सा Mock Test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* Cool Design: Gradient, Card, Button Animations, Responsive */
+    /* --- existing CSS unchanged --- */
     body {
       font-family: 'Segoe UI', 'Noto Sans Devanagari', Arial, sans-serif;
       background: linear-gradient(135deg, #16a085 0%, #f4d03f 100%);
@@ -42,6 +42,7 @@
       box-shadow: 0 2px 6px rgba(44,62,80,0.1);
       z-index: 2;
     }
+    /* --- rest of CSS unchanged --- */
     .question-card {
       background: #f9f9f9;
       border-radius: 12px;
@@ -62,7 +63,7 @@
       padding: 12px 16px;
       border-radius: 10px;
       cursor: pointer;
-      transition: background 0.2s, color 0.2s;
+      transition: background 0.2s, color 0.2s, box-shadow 0.3s;
       font-size: 1.08em;
       border: 2px solid transparent;
     }
@@ -70,6 +71,32 @@
       background: #16a085;
       color: #fff;
       border: 2px solid #138d75;
+    }
+    .right-answer {
+      background: #28a745 !important;
+      color: #fff !important;
+      border: 2px solid #1e7e34 !important;
+      box-shadow: 0 0 16px 2px #28a74588;
+      animation: glowRight 0.6s alternate 3;
+    }
+    @keyframes glowRight {
+      from { box-shadow: 0 0 8px 2px #28a74544; }
+      to { box-shadow: 0 0 24px 10px #28a74599; }
+    }
+    .wrong-answer {
+      background: #e74c3c !important;
+      color: #fff !important;
+      border: 2px solid #c0392b !important;
+      box-shadow: 0 0 16px 2px #e74c3c88;
+      animation: glowWrong 0.6s alternate 3;
+    }
+    @keyframes glowWrong {
+      from { box-shadow: 0 0 8px 2px #e74c3c44; }
+      to { box-shadow: 0 0 24px 10px #e74c3c99; }
+    }
+    .disabled-option {
+      opacity: 0.7;
+      pointer-events: none;
     }
     .btn {
       display: inline-block;
@@ -124,7 +151,6 @@
       #timer { right: 8px; top: 8px;}
       .question-card { padding: 10px 6px;}
     }
-    /* Progress bar */
     #progress-bar-bg {
       width: 100%;
       height: 10px;
@@ -212,7 +238,10 @@
 
     let currQ = 0, score = 0, answers = [];
     const totalQ = questions.length;
-    let timerInterval, timeLeft = 30*60; // 30 min for 50 Q
+
+    // Set time to half minute per question
+    let timerInterval;
+    let timeLeft = Math.floor(totalQ * 0.5 * 60); // 0.5 min per question, in seconds
 
     // Format time mm:ss
     function formatTime(t) {
@@ -239,7 +268,6 @@
       document.getElementById('progress-bar').style.width = percent+"%";
     }
 
-    // Show Question
     function showQuestion() {
       updateProgressBar();
       if(currQ >= totalQ) {
@@ -252,30 +280,45 @@
         <form id="optionsForm" class="options">`;
       for(let i=0;i<qObj.opts.length;i++) {
         html += `<input type="radio" id="opt${i}" name="option" value="${i}" style="display:none;">
-          <label for="opt${i}">${String.fromCharCode(65+i)}. ${qObj.opts[i]}</label>`;
+          <label for="opt${i}" data-index="${i}">${String.fromCharCode(65+i)}. ${qObj.opts[i]}</label>`;
       }
       html += `</form>
         <button class="btn" id="nextBtn" disabled>अगला</button>
       </div>`;
       document.getElementById('test-section').innerHTML = html;
 
-      // Enable next on select
       const form = document.getElementById('optionsForm');
+      const nextBtn = document.getElementById('nextBtn');
+      let answered = false;
       form.addEventListener('change', ()=>{
-        document.getElementById('nextBtn').disabled = false;
+        if(answered) return;
+        nextBtn.disabled = false;
+        answered = true;
+        const selected = +form.option.value;
+        answers[currQ] = selected;
+        const labels = form.querySelectorAll('label');
+        labels.forEach(label => {
+          label.classList.add('disabled-option');
+        });
+        const rightIdx = qObj.ans;
+        if(selected === rightIdx) {
+          labels[selected].classList.remove('disabled-option');
+          labels[selected].classList.add('right-answer');
+          score++;
+        } else {
+          labels[selected].classList.remove('disabled-option');
+          labels[selected].classList.add('wrong-answer');
+          labels[rightIdx].classList.remove('disabled-option');
+          labels[rightIdx].classList.add('right-answer');
+        }
       });
 
-      // Next
-      document.getElementById('nextBtn').onclick = ()=>{
-        const selected = form.option.value;
-        answers[currQ] = Number(selected);
-        if(Number(selected)===qObj.ans) score++;
+      nextBtn.onclick = ()=>{
         currQ++;
         showQuestion();
       };
     }
 
-    // Show Result
     function showResult() {
       clearInterval(timerInterval);
       document.getElementById('test-section').innerHTML = '';
@@ -289,9 +332,9 @@
       document.getElementById('result-msg').textContent = msg;
     }
 
-    // Restart
     document.getElementById('restart-btn').onclick = ()=>{
-      currQ=0; score=0; answers=[]; timeLeft=30*60;
+      currQ=0; score=0; answers=[];
+      timeLeft = Math.floor(totalQ * 0.5 * 60); // Reset timer dynamically
       document.getElementById('result-section').style.display = "none";
       startTimer(); showQuestion();
     };
