--- a/html/mock_test/html/mocktest2.html
+++ b/html/mock_test/html/mocktest2.html
@@ -2,9 +2,10 @@
 <html lang="hi">
 <head>
   <meta charset="UTF-8">
-  <title>ITI इलेक्ट्रीशियन: विद्युत धारा, वोल्टेज, प्रतिरोध MCQ Test</title>
+  <title>ITI इलेक्ट्रीशियन: सुरक्षा और प्राथमिक चिकित्सा Mock Test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    /* --- existing CSS unchanged --- */
     body {
       font-family: 'Segoe UI', 'Noto Sans Devanagari', Arial, sans-serif;
       background: linear-gradient(135deg, #16a085 0%, #f4d03f 100%);
@@ -41,6 +42,7 @@
       box-shadow: 0 2px 6px rgba(44,62,80,0.1);
       z-index: 2;
     }
+    /* --- rest of CSS unchanged --- */
     .question-card {
       background: #f9f9f9;
       border-radius: 12px;
@@ -61,7 +63,7 @@
       padding: 12px 16px;
       border-radius: 10px;
       cursor: pointer;
-      transition: background 0.2s, color 0.2s;
+      transition: background 0.2s, color 0.2s, box-shadow 0.3s;
       font-size: 1.08em;
       border: 2px solid transparent;
     }
@@ -69,6 +71,32 @@
       background: #16a085;
       color: #fff;
       border: 2px solid #138d75;
+    }
+    .right-answer {
+      background: #28a745 !important;
+      color: #fff !important;
+      border: 2px solid #1e7e34 !important;
+      box-shadow: 0 0 16px 2px #28a74588;
+      animation: glowRight 0.6s alternate 3;
+    }
+    @keyframes glowRight {
+      from { box-shadow: 0 0 8px 2px #28a74544; }
+      to { box-shadow: 0 0 24px 10px #28a74599; }
+    }
+    .wrong-answer {
+      background: #e74c3c !important;
+      color: #fff !important;
+      border: 2px solid #c0392b !important;
+      box-shadow: 0 0 16px 2px #e74c3c88;
+      animation: glowWrong 0.6s alternate 3;
+    }
+    @keyframes glowWrong {
+      from { box-shadow: 0 0 8px 2px #e74c3c44; }
+      to { box-shadow: 0 0 24px 10px #e74c3c99; }
+    }
+    .disabled-option {
+      opacity: 0.7;
+      pointer-events: none;
     }
     .btn {
       display: inline-block;
@@ -142,7 +170,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>ITI इलेक्ट्रीशियन:<br> विद्युत धारा, वोल्टेज, प्रतिरोध MCQ Test</h1>
+    <h1>ITI इलेक्ट्रीशियन: <br>सुरक्षा और प्राथमिक चिकित्सा Mock Test</h1>
     <div id="timer"></div>
     <div id="progress-bar-bg"><div id="progress-bar"></div></div>
     <div id="test-section"></div>
@@ -154,6 +182,8 @@
     </div>
   </div>
   <script>
+    // Data: 50 MCQs (Hindi)
+    const questions = [
     // विद्युत धारा, वोल्टेज, प्रतिरोध, ओम का नियम, सर्किट और मूल तत्व पर MCQs
     const questions = [
       // Current (धारा)
@@ -215,13 +245,18 @@
 
     let currQ = 0, score = 0, answers = [];
     const totalQ = questions.length;
-    let timerInterval, timeLeft = 20*60; // 20 min for 50 Q
 
+    // Set time to half minute per question
+    let timerInterval;
+    let timeLeft = Math.floor(totalQ * 0.5 * 60); // 0.5 min per question, in seconds
+
+    // Format time mm:ss
     function formatTime(t) {
       const m = Math.floor(t/60), s = t%60;
       return `${m<10?'0':''}${m}:${s<10?'0':''}${s}`;
     }
 
+    // Timer
     function startTimer() {
       document.getElementById('timer').textContent = "समय: " + formatTime(timeLeft);
       timerInterval = setInterval(()=>{
@@ -234,6 +269,7 @@
       },1000);
     }
 
+    // Progress bar
     function updateProgressBar() {
       const percent = ((currQ)/totalQ)*100;
       document.getElementById('progress-bar').style.width = percent+"%";
@@ -251,7 +287,7 @@
         <form id="optionsForm" class="options">`;
       for(let i=0;i<qObj.opts.length;i++) {
         html += `<input type="radio" id="opt${i}" name="option" value="${i}" style="display:none;">
-          <label for="opt${i}">${String.fromCharCode(65+i)}. ${qObj.opts[i]}</label>`;
+          <label for="opt${i}" data-index="${i}">${String.fromCharCode(65+i)}. ${qObj.opts[i]}</label>`;
       }
       html += `</form>
         <button class="btn" id="nextBtn" disabled>अगला</button>
@@ -259,14 +295,32 @@
       document.getElementById('test-section').innerHTML = html;
 
       const form = document.getElementById('optionsForm');
+      const nextBtn = document.getElementById('nextBtn');
+      let answered = false;
       form.addEventListener('change', ()=>{
-        document.getElementById('nextBtn').disabled = false;
+        if(answered) return;
+        nextBtn.disabled = false;
+        answered = true;
+        const selected = +form.option.value;
+        answers[currQ] = selected;
+        const labels = form.querySelectorAll('label');
+        labels.forEach(label => {
+          label.classList.add('disabled-option');
+        });
+        const rightIdx = qObj.ans;
+        if(selected === rightIdx) {
+          labels[selected].classList.remove('disabled-option');
+          labels[selected].classList.add('right-answer');
+          score++;
+        } else {
+          labels[selected].classList.remove('disabled-option');
+          labels[selected].classList.add('wrong-answer');
+          labels[rightIdx].classList.remove('disabled-option');
+          labels[rightIdx].classList.add('right-answer');
+        }
       });
 
-      document.getElementById('nextBtn').onclick = ()=>{
-        const selected = form.option.value;
-        answers[currQ] = Number(selected);
-        if(Number(selected)===qObj.ans) score++;
+      nextBtn.onclick = ()=>{
         currQ++;
         showQuestion();
       };
@@ -279,18 +333,20 @@
       document.getElementById('result-section').style.display = "block";
       document.getElementById('score').textContent = `${score}/${totalQ}`;
       let msg = '';
-      if(score>=35) msg = "बहुत अच्छा! आप विद्युत के सिद्धांतों में एक्सपर्ट हैं।";
-      else if(score>=25) msg = "अच्छा प्रयास! थोड़ा और अभ्यास करें।";
+      if(score>=45) msg = "बहुत अच्छा! आप सुरक्षा में एक्सपर्ट हैं।";
+      else if(score>=35) msg = "अच्छा प्रयास! थोड़ा और अभ्यास करें।";
       else msg = "अभ्यास की आवश्यकता है, कृपया पुनः प्रयास करें।";
       document.getElementById('result-msg').textContent = msg;
     }
 
     document.getElementById('restart-btn').onclick = ()=>{
-      currQ=0; score=0; answers=[]; timeLeft=20*60;
+      currQ=0; score=0; answers=[];
+      timeLeft = Math.floor(totalQ * 0.5 * 60); // Reset timer dynamically
       document.getElementById('result-section').style.display = "none";
       startTimer(); showQuestion();
     };
 
+    // Initial
     startTimer();
     showQuestion();
   </script>
