--- a/html/mock_test/html/mocktest2.html
+++ b/html/mock_test/html/mocktest2.html
@@ -160,7 +160,7 @@
       overflow: hidden;
     }
     #progress-bar {
-      height: 100%;
+      heiquestion;
       background: linear-gradient(90deg, #16a085, #f4d03f);
       width: 0%;
       border-radius: 10px;
@@ -183,8 +183,7 @@
   </div>
   <script>
     // Data: 50 MCQs (Hindi)
-    const questions = [
-    // विद्युत धारा, वोल्टेज, प्रतिरोध, ओम का नियम, सर्किट और मूल तत्व पर MCQs
+     // विद्युत धारा, वोल्टेज, प्रतिरोध, ओम का नियम, सर्किट और मूल तत्व पर MCQs
     const questions = [
       // Current (धारा)
       { q: "विद्युत धारा क्या है?", opts: ["इलेक्ट्रॉनों का प्रवाह", "प्रोटॉन का प्रवाह", "ऊष्मा का प्रवाह", "प्रकाश का प्रवाह"], ans: 0 },
