--- a/html/mock_test/html/mocktest2.html
+++ b/html/mock_test/html/mocktest2.html
@@ -170,7 +170,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>ITI इलेक्ट्रीशियन: <br>सुरक्षा और प्राथमिक चिकित्सा Mock Test</h1>
+    <h1>ITI इलेक्ट्रीशियन: <br>Basics of Electricity – Current, Voltage, Resistance (विद्युत के मूल तत्व) Mock Test</h1>
     <div id="timer"></div>
     <div id="progress-bar-bg"><div id="progress-bar"></div></div>
     <div id="test-section"></div>
@@ -178,7 +178,7 @@
       <h2>आपका परिणाम</h2>
       <div class="score" id="score"></div>
       <div id="result-msg"></div>
-      <button id="restart-btn">फिर से शुरू करें</button>
+      <button id="restart-btn"> Try Again </button>
     </div>
   </div>
   <script>
