--- a/html/mock_test/html/mocktest2.html
+++ b/html/mock_test/html/mocktest2.html
@@ -166,6 +166,10 @@
       border-radius: 10px;
       transition: width 0.4s;
     }
+    .radhe{
+      color:blue;
+      
+    }
   </style>
 </head>
 <body>
@@ -181,6 +185,9 @@
       <button id="restart-btn"> Try Again </button>
     </div>
   </div>
+  <footer>
+       <h3 CLASS = "radhe"> || RADHE RADHE ||</h3>
+  </footer>
   <script>
     // Data: 50 MCQs (Hindi)
      // विद्युत धारा, वोल्टेज, प्रतिरोध, ओम का नियम, सर्किट और मूल तत्व पर MCQs
