--- a/html/mock_test/html/mocktest2.html
+++ b/html/mock_test/html/mocktest2.html
@@ -186,7 +186,7 @@
     </div>
   </div>
   <footer>
-       <h3 CLASS = "radhe"> || RADHE RADHE ||</h3>
+       <h3 CLASS = "radhe"> राधे राधे 🙏🙏 </h3>
   </footer>
   <script>
     // Data: 50 MCQs (Hindi)
