--- a/html/notes summery/html/N3.html
+++ b/html/notes summery/html/N3.html
@@ -162,7 +162,7 @@
 <body>
   <header>
     <h1>📘 Electrical Symbols, Units & SI System</h1>
-    <p>महत्वपूर्ण संक्षिप्त नोट्स • Royal Guide</p>
+    <p>महत्वपूर्ण संक्षिप्त नोट्स • Ashwin Royal Guide</p>
   </header>
 
   <main>
