--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1> Welcome To Learning World></h1>
         <p>HEYY Guys here, you will get a lot of resorces to study </p>
         
-        <a href="#" class="btn-primary"> Start  Mock test </a>
+        <a href="myweb/myweb.html" class="btn-primary"> Profile Web Page</a>
       </div>
       <br>
       <div class="#">
