--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> mock test iti website </title></title>
+  <title> ITI electrician website</title></title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bounce.css">
   <link rel="stylesheet" href="css/footer.css">
