--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 🌺🌼🌼🌼🌺
 🌺🌼☀🌼🌺
 🌺🌼🌼🌼🌺     
-  🌺🌺🌺🌺  visit my profile web page and follow me on social media
+  🌺🌺🌺🌺  visit my profile web page and follow me on social media🌺🌺🌺🌺
+🌺🌼🌼🌼🌺
+🌺🌼☀🌼🌺
+🌺🌼🌼🌼🌺     
+  🌺🌺🌺🌺
           🌱
           🌱🍃
           🌱
