--- a/index.html
+++ b/index.html
@@ -37,21 +37,7 @@
       </div>
       <br>
       <div class="#">
-        <p class= "font">     🌺🌺🌺🌺
-🌺🌼🌼🌼🌺
-🌺🌼☀🌼🌺
-🌺🌼🌼🌼🌺     
-  🌺🌺🌺🌺  visit my profile web page and follow me on social media🌺🌺🌺🌺
-🌺🌼🌼🌼🌺
-🌺🌼☀🌼🌺
-🌺🌼🌼🌼🌺     
-  🌺🌺🌺🌺
-          🌱
-          🌱🍃
-          🌱
-     👶🌱
-     👚👍
-  👟👟 </p>
+        <p class= "font"> ✨✨ ViSit my Profile web page ✨<br> 🔥⚡follow me on Social media⚡🔥</p>
       </div>
     </div>
   </header>
