--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <br>
       <div class="#">
-        <p class= "font"> ✨✨ ViSit my Profile web page ✨<br> 🔥⚡follow me on Social media⚡🔥</p>
+        <p class= "font"> ✨✨ ViSit my Profile web page ✨<br> 🔥⚡follow me on Social media⚡🔥 <br> https://media.tenor.com/PcuzLwfORO4AAAAM/sedih.gif</p>
       </div>
     </div>
   </header>
