--- a/myweb/myweb.html
+++ b/myweb/myweb.html
@@ -234,7 +234,7 @@
                 </div>
                 
                 <div class="social-links">
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/ashwintherock?igsh=MTVxYzN0bW9waDBpZw==" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
