--- a/myweb/myweb.html
+++ b/myweb/myweb.html
@@ -207,6 +207,11 @@
                 font-size: 1.5rem;
             }
         }
+        .social-media{
+            text-align:center;
+            color:white ;
+            font-weight:bold;
+        }
 
     </style>
     
@@ -232,7 +237,7 @@
                         <span class="bio-text">Front end web developer creates engaging websites.</span>
                     </p>
                 </div>
-                
+                <h3 class="social-media">⚡Social media links 👇</h3>
                 <div class="social-links">
                     <a href="https://www.instagram.com/ashwintherock?igsh=MTVxYzN0bW9waDBpZw==" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
