--- a/myweb/myweb.html
+++ b/myweb/myweb.html
@@ -211,7 +211,7 @@
             text-align:center;
             color:white ;
             font-weight:bold;
-            margin-top:60px;
+            margin: 40px 10px;
         }
 
     </style>
