--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -45,31 +46,18 @@
     <div class="containerglow">
       <h2 class = "target-text">ITI Electrician trade (theory)</h2>
       <div class="feature-grid">
-      <a href= "Theory subject/notes summery/chapterwise_notessummery.html" target= "self"><div class="feature box box1">Notes Summery </div></a>
-      <a href="Theory subject/Chapterwise Q&A/chapterwise_qna.html" target="self"><div class="feature box box2"> Chapterwise Q&A</div></a>
-      <a href="Theory subject/mock_test/chapterwise_mocktest.html" target="self"><div class="feature box box3"> Chapterwise Mock Test </div></a>
-      </div>
-    </div>
-    
-    <div class="containerglow">
-      <h2 class = "target-text">ITI Electrician trade (theory)</h2>
-      <div class="feature-grid">
-      <a href= "Theory subject/notes summery/chapterwise_notessummery.html" target= "self"><div class="feature box box1">Notes Summery </div></a>
-      <a href="Theory subject/Chapterwise Q&A/chapterwise_qna.html" target="self"><div class="feature box box2"> Chapterwise Q&A</div></a>
-      <a href="Theory subject/mock_test/chapterwise_mocktest.html" target="self"><div class="feature box box3"> Chapterwise Mock Test </div></a>
-      </div>
-    </div>
-    
-    <div class="containerglow">
-      <h2 class = "target-text">ITI Electrician trade (theory)</h2>
-      <div class="feature-grid">
-      <a href= "Theory subject/notes summery/chapterwise_notessummery.html" target= "self"><div class="feature box box1">Notes Summery </div></a>
-      <a href="Theory subject/Chapterwise Q&A/chapterwise_qna.html" target="self"><div class="feature box box2"> Chapterwise Q&A</div></a>
-      <a href="Theory subject/mock_test/chapterwise_mocktest.html" target="self"><div class="feature box box3"> Chapterwise Mock Test </div></a>
+      <a href= "html/notes summery/chapterwise_notessummery.html" target= "self"><div class="feature box box1">Notes Summery </div></a>
+      <a href="html/chapterwise_mcqs/chapterwise_mcqs.html" target="self"><div class="feature box box2"> Chapterwise Q&A</div></a>
+      <a href="html/mock_test/chapterwise_mocktest.html" target="self"><div class="feature box box3"> Chapterwise Mock Test </div></a>
       </div>
     </div>
   </section>
- <footer class="site-footer">
+ <!-- यहाँ se design hai kuchh-->
+
+
+
+  <!-- Footer Start -->
+  <footer class="site-footer">
     <div class="footer-container">
       <div class="footer-column">
         <h3>ITI Electrician Trade</h3>
@@ -101,7 +89,10 @@
       © 2025 ITI Electrician Trade | सर्वाधिकार सुरक्षित
     </div>
   </footer>
-  <script src="javascript/bounce.js"></script>
+  <!-- Footer End -->
+
+  
+<script src="javascript/bounce.js"></script>
 <script src="javascript/footer.js"></script>
 <script src="javascript/dropbox.js"></script>
 
