--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="hero-text">
         <h1> Welcome To Learning World></h1>
-        <p>HEYY Guys here, you will get a lot of resorces to study </p>
+        <p>HEYY Guys here, you will get a lot of resorces for study </p>
         
         <a href="myweb/myweb.html" class="btn-primary"> Profile Web Page</a>
       </div>
