--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p class="highlight dropt size">ASHWIN CHAUHAN</p>
     <div class="container">
       <div class="hero-text">
-        <h1> Welcome To Learning World></h1>
+        <h1 class="typing-text"> Welcome To Learning World</h1>
         <p>HEYY Guys here, you will get a lot of resorces for study </p>
         
         <a href="myweb/myweb.html" class="btn-primary"> Profile Web Page</a>
