--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
       </div>
     </div>
   </header>
+   <!-- roadmap button here -->
+    <button class="futuristic-button">
+  <span class="button-text">Roadmap</span>
+  <span class="star star-1"></span>
+  <span class="star star-2"></span>
+  <span class="star star-3"></span>
+  <span class="star star-4"></span>
+</button>
 
+  
   <section class="features bodyg">
     <div class="containerglow">
       <h2 class = "target-text">ITI Electrician trade (theory)</h2>
