--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </div>
   </header>
    <!-- roadmap button here -->
+  <div class= "btn-center">
     <button class="futuristic-button">
   <span class="button-text">Roadmap</span>
   <span class="star star-1"></span>
@@ -49,7 +50,7 @@
   <span class="star star-3"></span>
   <span class="star star-4"></span>
 </button>
-
+  </div>
   
   <section class="features bodyg">
     <div class="containerglow">
