--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </header>
    <!-- roadmap button here -->
-  <div class= "btn-center">
+  <a href="roadmap/roadmap2.html" class= ""><div class= "btn-center">
     <button class="futuristic-button">
   <span class="button-text">Roadmap</span>
   <span class="star star-1"></span>
@@ -51,7 +51,7 @@
   <span class="star star-4"></span>
 </button>
   </div>
-  
+  </a>
   <section class="features bodyg">
     <div class="containerglow">
       <h2 class = "target-text">ITI Electrician trade (theory)</h2>
